--- a/src/app/shared/buttons/menu-option/menu-option.component.html
+++ b/src/app/shared/buttons/menu-option/menu-option.component.html
@@ -1,4 +1,4 @@
 <button routerLink="/{{link}}" class="nav-link align-middle px-0 my-1">
     <i class="bi {{icon}}"></i>
-    <span class="ms-3 d-none d-sm-inline">{{titulo}}</span>
+    <span class="ms-3 d-none d-sm-inline">{{title}}</span>
 </button>
