--- a/src/app/pages/create-site/page-canvas/body-builder/image-canvas/image-canvas.component.html
+++ b/src/app/pages/create-site/page-canvas/body-builder/image-canvas/image-canvas.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center m-4">
-    <figure class="{{clase}}">
-        <img src="{{fuenteImg}}" alt="imagen" class="{{clase}}">
+    <figure class="{{class}}">
+        <img src="{{fuenteImg}}" alt="imagen" class="{{class}}">
         <figcaption class="figure-caption">{{captionImg}}</figcaption>
     </figure>  
 </div>
