--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,21 +12,21 @@
         >
           <li >
             <app-menu-option
-              [titulo]="'Mis sitios'"
+              [title]="'Mis sitios'"
               [link]="'misSitios'"
               [icon]="'bi-house'"
             ></app-menu-option>
           </li>
           <li>
             <app-menu-option
-              [titulo]="'Ranking'"
+              [title]="'Ranking'"
               [link]="'ranking'"
               [icon]="'bi-list-stars'"
             ></app-menu-option>
           </li>
           <li>
             <app-menu-option
-              [titulo]="'Mi cuenta'"
+              [title]="'Mi cuenta'"
               [link]="'mi-cuenta'"
               [icon]="'bi-person-circle'"
             ></app-menu-option>
@@ -39,7 +39,7 @@
         >
           <li>
             <app-menu-option
-              [titulo]="'Usuarios'"
+              [title]="'Usuarios'"
               [link]="'sasitios'"
               [icon]="'bi-person-circle'"
             ></app-menu-option>
