--- a/src/app/pages/sites/sites.component.html
+++ b/src/app/pages/sites/sites.component.html
@@ -5,7 +5,7 @@
   [style.background-color]="webContent.newCrearSitio.backgroundColor"
 >
 <!-- Componente para construir el header del sitio -->
-  <app-titulo-lienzo
+  <app-title-canvas
     [hero]="webContent.newCrearSitio.header.hero"
     [title]="webContent.newCrearSitio.header.title"
     [position]="webContent.newCrearSitio.header.position"
@@ -13,7 +13,7 @@
     [color]="webContent.newCrearSitio.header.color"
     [image]="webContent.newCrearSitio.header.image"
   >
-  </app-titulo-lienzo>
+  </app-title-canvas>
   <!-- Componente para construir los elementos que conforman al body del sitio -->
   <app-body-builder
     *ngFor="let item of this.webContent.newCrearSitio.body; let i = index"
@@ -23,7 +23,7 @@
   <br>
   <br>
   <!-- Componente para construir el footer del sitio -->
-  <app-footer-lienzo
+  <app-footer-canvas
     class="m-0 p-0"
     [backgroundColor]="webContent.newCrearSitio.footer.backgroundColor"
     [textColor]="webContent.newCrearSitio.footer.textColor"
@@ -33,13 +33,13 @@
     [twitterUrl]="webContent.newCrearSitio.footer.socialMedia.twitter"
     [linkedinUrl]="webContent.newCrearSitio.footer.socialMedia.linkedin"
     [tiktokUrl]="webContent.newCrearSitio.footer.socialMedia.tiktok"
-    [otroUrl]="webContent.newCrearSitio.footer.socialMedia.otro"
+    [extraUrl]="webContent.newCrearSitio.footer.socialMedia.extraUrl"
     [setExtra]="webContent.newCrearSitio.footer.extra.setExtra"
-    [imgExtraFooter]="webContent.newCrearSitio.footer.extra.image"
+    [imageExtraFooter]="webContent.newCrearSitio.footer.extra.imageExtraFooter"
     [textExtraFooter]="webContent.newCrearSitio.footer.extra.text"
     [setContact]="webContent.newCrearSitio.footer.contact.setContact"
     [phone]="webContent.newCrearSitio.footer.contact.phone"
     [address]="webContent.newCrearSitio.footer.contact.address"
-  ></app-footer-lienzo>
+  ></app-footer-canvas>
 </div>
 </ng-container>
