fix(testedVersion): VerifiedFront V6

--- a/src/app/views/shared/main-layout/main-layout.component.html
+++ b/src/app/views/shared/main-layout/main-layout.component.html
@@ -5,7 +5,7 @@
     ></app-sidebar>
 </div>
 <app-header
-    [name]="name"
+    [name]="name || ''"
 ></app-header>
 <div class="row m-0 p-0">
     <div class="col-2">
