fix(role): change_name

--- a/src/app/views/shared/sidebar/sidebar.component.html
+++ b/src/app/views/shared/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
         <br>
         <span class="fs-5 d-none d-sm-inline pt-5">Menú</span>
         <ul
-          *ngIf="role=='admin'"
+          *ngIf="role=='Client'"
           class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
           id="menu"
         >
@@ -33,7 +33,7 @@
           </li>
         </ul>
         <ul
-          *ngIf="role=='superadmin'"
+          *ngIf="role=='Admin'"
           class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
           id="menu"
         >
